Few new updates

--- a/Variables.ipynb
+++ b/Variables.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "int, float, str, list are common types of variables"
+    "# int, float, str,bool, list, tuple, set, dict etc are common types of variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,15 +93,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A list is defined with in [ ] separating each entry by commas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']\n",
+      "['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'] \n",
+      "\n",
+      "Sunday\n",
+      "Monday\n",
+      "Tuesday\n",
+      "Wednesday\n",
+      "Thursday\n",
+      "Friday\n",
+      "Saturday\n",
+      "\n",
+      "\n",
       "Sunday\n",
       "Monday\n",
       "Tuesday\n",
@@ -114,27 +131,182 @@
    ],
    "source": [
     "days=['Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday']#define a list of days in a week\n",
-    "print(days)#print the list\n",
+    "print(days,'\\n')#print the list\n",
     "for i in days:\n",
-    "    print(i)#print the contents of days one by one"
+    "    print(i)#print the contents of days one by one\n",
+    "#Alternatively using indexing in list object\n",
+    "print('\\n')\n",
+    "for i in range(7):\n",
+    "    print(days[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 7 entries in the lise days\n"
+      "There are 7 entries in the list days\n"
      ]
     }
    ],
    "source": [
     "count=len(days)#number of entries in the list 'days'\n",
-    "print('There are {} entries in the lise days'.format(count))"
+    "print('There are {} entries in the list days'.format(count))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A tuple is defined within ( ) separating each entry by commas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "('January', 'February', 'March', 'April') \n",
+      "\n",
+      "There are 4 entries in the tuple myTuple \n",
+      "\n",
+      "January\n",
+      "February\n",
+      "March\n",
+      "April\n",
+      "\n",
+      "\n",
+      "January\n",
+      "February\n",
+      "March\n",
+      "April\n",
+      "\n",
+      "\n",
+      "The 1st entry in the set \"myTuple\" is January\n",
+      "and\n",
+      "The last entry in the set \"myTuple\" is April\n"
+     ]
+    }
+   ],
+   "source": [
+    "myTuple=('January','February','March','April')\n",
+    "print(type(myTuple))\n",
+    "count=len(myTuple)\n",
+    "print(myTuple,'\\n')\n",
+    "print('There are {} entries in the tuple myTuple'.format(count),'\\n')\n",
+    "for i in myTuple:\n",
+    "    print(i)\n",
+    "#Alternatively using indexing in tuple object\n",
+    "print('\\n')\n",
+    "for i in range(count):\n",
+    "    print(myTuple[i])\n",
+    "print('\\n')\n",
+    "print('The 1st entry in the set \"myTuple\" is '+myTuple[0])#counting starts from 0,1,...\n",
+    "print('and')\n",
+    "print('The last entry in the set \"myTuple\" is '+myTuple[-1])#backward counting starts from -1,-2,..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A set is defined with { } each entry separated by commas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n",
+      "There are 4 entries in the set \"mySet\" \n",
+      "\n",
+      "Krishna\n",
+      "Ram\n",
+      "Shyam\n",
+      "Hari\n"
+     ]
+    }
+   ],
+   "source": [
+    "mySet={'Ram','Krishna','Shyam','Hari'}\n",
+    "print(type(mySet))\n",
+    "count=len(mySet)\n",
+    "print('There are %d entries in the set \"mySet\"'%count,'\\n')#this is another way of writing .format()\n",
+    "for i in mySet:\n",
+    "    print(i)\n",
+    "#indexing is not allowed in set object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "AnotherSet={2,3,4,5}#A set of numbers\n",
+    "print(type(AnotherSet))\n",
+    "for i in AnotherSet:\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 5 entries in the given list\n",
+      "\n",
+      "There are 5 entries in the given list\n",
+      "\n",
+      "3\n",
+      "4\n",
+      "2\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "AnotherList=[3,4,2,5,6]\n",
+    "count=len(AnotherList)\n",
+    "print('There are %s entries in the given list'%str(count)+'\\n')#converting a number into string\n",
+    "#Alternatively\n",
+    "print('There are '+str(count)+' entries in the given list\\n')\n",
+    "for i in range(count):\n",
+    "    tmp=AnotherList[i]\n",
+    "    print(tmp)\n",
+    "del AnotherList#delete the list AnotherList\n",
+    "#print(AnotherList)#this gives \"name\" error because we deleted the list name AnotherList"
    ]
   },
   {
@@ -146,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -200,8 +372,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -220,8 +394,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -250,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -280,11 +456,99 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Dictionary (dict) is another type of data defined within { } separated each defination by commas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "{'Make': 'Hyundai', 'Model': 'Elantra', 'Year': 2018, 'Color': 'Silver'}\n",
+      "Length of the dictionary \"Car\" is 4 \n",
+      "Your car is Hyundai\n",
+      "You car is Hyundai Elantra\n",
+      "\n",
+      "\n",
+      "The color of your car is Silver\n"
+     ]
+    }
+   ],
+   "source": [
+    "Car={'Make':'Hyundai','Model':'Elantra','Year':2018,'Color':'Silver'}\n",
+    "print(type(Car))\n",
+    "print(Car)#print the dictionary\n",
+    "length=len(Car)#length of the dictionary\n",
+    "print('Length of the dictionary \"Car\" is %d '%length)\n",
+    "print('Your car is '+Car.get('Make'))\n",
+    "print('You car is %s'%Car['Make']+' '+Car['Model'])#another way of get()\n",
+    "print('\\n')\n",
+    "if 'Color' in Car:\n",
+    "    print('The color of your car is '+Car.get('Color'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dictionary Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Make': 'Hyundai', 'Model': 'Elantra', 'Year': 2018, 'Color': 'Silver', 'Added': 'New'}\n",
+      "\n",
+      "\n",
+      "dict_items([('Make', 'Hyundai'), ('Model', 'Elantra'), ('Year', 2018), ('Color', 'Silver'), ('Added', 'New')])\n",
+      "\n",
+      "\n",
+      "dict_keys(['Make', 'Model', 'Year', 'Color', 'Added'])\n",
+      "\n",
+      "\n",
+      "{'Make': 'Hyundai', 'Model': 'Elantra', 'Year': 2018, 'Color': 'Silver'}\n",
+      "\n",
+      "\n",
+      "{'Make': 'Hyundai', 'Model': 'Elantra', 'Year': 2018, 'Color': 'Silver', 'Added': 'New'}\n",
+      "\n",
+      "\n",
+      "{'Make': 'Hyundai', 'Model': 'Elantra', 'Year': 2018, 'Color': 'Silver', 'Added': 'New'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Car['Added']='New'#this adds new element in the dictionary\n",
+    "print(Car)\n",
+    "print('\\n')\n",
+    "print(Car.items())#returns a list containing a tuple for each key value pair\n",
+    "print('\\n')\n",
+    "print(Car.keys())#returns a list of keys\n",
+    "Car.pop('Added')#Removes the element with the specified key\n",
+    "print('\\n')\n",
+    "print(Car)\n",
+    "print('\\n')\n",
+    "Car.update({'Added':'New'})#updates the dictionary with the specified key-value pair\n",
+    "print(Car)\n",
+    "print('\\n')\n",
+    "NewCar=Car.copy()#make a copy of existing dictionary\n",
+    "print(NewCar)\n",
+    "#NewCar.clear()#Removes all the elements from the dictionary\n",
+    "#print(NewCar)"
+   ]
   }
  ],
  "metadata": {
@@ -303,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
