--- a/plot_errorbar_fit.ipynb
+++ b/plot_errorbar_fit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,21 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The total number of data points is  9\n"
+      "The total number of data points is 9\n"
      ]
     }
    ],
    "source": [
     "infile = pd.read_csv('summary.txt',sep = '\\t')\n",
     "count = infile.iloc[:,1].count()#counts the total number of entries in column1. Column number and row number start from 0\n",
-    "print('The total number of data points is ',count)"
+    "print('The total number of data points is {}'.format(count))"
    ]
   },
   {
@@ -99,13 +99,6 @@
     "plt.savefig('../plots/plot_errors.png')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
